force-app/main/default/objects/cdcpc__ConfiguredPart__c/cdcpc__ConfiguredPart__c.object-meta.xml
<CustomObject>
    <label>Configured Part</label>
    <nameField>
        <displayFormat>Part-{0000}</displayFormat>
        <label>Configured Part Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Configured Parts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>