force-app/main/default/objects/cdcpc__ConfiguredPart__c/fields/cdcpc__ManagedIn__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__ManagedIn__c</fullName>
    <label>Managed In</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>IFS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>