force-app/main/default/objects/cdcpc__ConfiguredPart__c/fields/cdcpc__PartConfigurator_PartNumberBaseSeq__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__PartConfigurator_PartNumberBaseSeq__c</fullName>
    <description>Unique sequence number of a special Base Part Number.</description>
    <inlineHelpText>Unique sequence number of a special Base Part Number.</inlineHelpText>
    <label>Part Config (Spcl Part Number Base Seq)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>