force-app/main/default/objects/cdcpc__ConfiguredPart__c/fields/cdcpc__PartKey02__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__PartKey02__c</fullName>
    <label>Part Key 02</label>
    <length>255</length>
    <type>Text</type>
</CustomField>