force-app/main/default/objects/cdcpc__ConfiguredPart__c/fields/cdcpc__PartKey__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__PartKey__c</fullName>
    <formula>cdcpc__PartKey01__c + BLANKVALUE(cdcpc__PartKey02__c, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Part Key</label>
    <type>Text</type>
</CustomField>