force-app/main/default/objects/cdcpc__ConfiguredPart__c/fields/cdcpc__Product__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Configured Part</relationshipLabel>
    <relationshipName>Configured_Part</relationshipName>
    <type>Lookup</type>
</CustomField>