force-app/main/default/objects/cdcpc__ConfiguredPart__c/validationRules/cdcpc__Active_Archive_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>cdcpc__Active_Archive_Check</fullName>
    <active>true</active>
    <description>Cannot be Archived and Active.</description>
    <errorConditionFormula>cdcpc__IsArchived__c  =  True &amp;&amp; cdcpc__IsActive__c  = True</errorConditionFormula>
    <errorMessage>Part cannot be Active and Archived</errorMessage>
</ValidationRule>