force-app/main/default/objects/cdcpc__ConfiguredPart__c/listViews/cdcpc__All_Configured_Part_Records.listView-meta.xml
<ListView>
    <fullName>cdcpc__All_Configured_Part_Records</fullName>
    <columns>NAME</columns>
    <columns>cdcpc__Configurator__c</columns>
    <columns>cdcpc__PartNumber__c</columns>
    <columns>cdcpc__IsSpecial__c</columns>
    <columns>cdcpc__ManagedIn__c</columns>
    <columns>cdcpc__IsActive__c</columns>
    <columns>cdcpc__IsArchived__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Configured Part Records</label>
</ListView>